5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1633_2943.log
== TEST (2019-04-02 18:59:49) 
-- CODE:
from math import*
a = float(input("distancia do centro da rosquinha"))
b = float(input("raio do tubo"))
c = float(input("quantidade de rosquinhas"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input(8/25,2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:02:39) 
-- CODE:
from math import*
R = float(input("distancia do centro da rosquinha:))
r = float(input("raio do tubo:))
Q = int(input("quantidade de rosquinhas:))
m = 2*(pi)**2*R*(r)**2*Q
				  print(m)
					 
-- ERROR:
File "XXXX", line 2
    R = float(input("distancia do centro da rosquinha:))
                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:03:13) 
-- CODE:
from math import*
R = float(input("distancia do centro da rosquinha:"))
r = float(input("raio do tubo:"))
Q = int(input("quantidade de rosquinhas:"))
m = 2*(pi)**2*R*(r)**2*Q
				  print(m)
					 
-- ERROR:
File "XXXX", line 6
    print(m)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:03:28) 
-- CODE:
from math import*
R = float(input("distancia do centro da rosquinha:"))
r = float(input("raio do tubo:"))
Q = int(input("quantidade de rosquinhas:"))
m = 2*(pi)**2*R*(r)**2*Q
print(m)				  
					 
-- OUTPUT:
103630.84621143826
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:03:40) 
-- CODE:
from math import*
R = float(input("distancia do centro da rosquinha:"))
r = float(input("raio do tubo:"))
Q = int(input("quantidade de rosquinhas:"))
m = 2*(pi)**2*R*(r)**2*Q
print(m)				  
					 
-- OUTPUT:
103630.84621143826
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:03:57) 
-- CODE:
from math import*
R = float(input("distancia do centro da rosquinha:"))
r = float(input("raio do tubo:"))
Q = int(input("quantidade de rosquinhas:"))
m = 2*(pi)**2*R*(r)**2*Q
print(m)				  
					 
-- OUTPUT:
103630.84621143826
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:04:43) 
-- CODE:
from math import*
R = float(input("distancia do centro da rosquinha:"))
r = float(input("raio do tubo:"))
Q = int(input("quantidade de rosquinhas:"))
m = 2*(pi)**2*R*(r)**2*Q
print(round(m,2))				  
					 
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:05:13) 
-- CODE:
from math import*
R = float(input("distancia do centro da rosquinha:"))
r = float(input("raio do tubo:"))
Q = int(input("quantidade de rosquinhas:"))
m = 2*(pi)**2*R*(r)**2*Q
print(round(m,2))				  
					 
-- EXECUTION TIME:
0.163588
-- TEST CASE 1:
---- input:
8.4
2.5
100
---- correct output:
103630.85
---- user output:
103630.85
-- TEST CASE 2:
---- input:
14.1
3.8
5
---- correct output:
20094.91
---- user output:
20094.91
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
